# XCPlayer

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  main.cpp
assets/shaders/: beautify.frag  beautify.frag.qsb  blur.frag  blur.frag.qsb  start.bat
ffmpeg-7.1.1/lib/: avcodec.lib
qml/: ArtistView.qml  AudioDelegate.qml  AudioDisplay.qml  ConfirmDialog.qml  CtrlBar.qml  FailedDialog.qml  FloatingLyrics.qml  FloatingWindow.qml  LibraryView.qml  Main.qml  MediaInfoPopup.qml  MediaView.qml  MetadataPopup.qml  MyButton.qml  MyListView.qml  MyMenuItem.qml  NavButton.qml  NavPanel.qml  NetworkStreamView.qml  PlaylistView.qml  SettingView.qml  TitleBar.qml  ToastDialog.qml  ToolView.qml  VideoDelegate.qml
src/: XCPlayer.cpp  XCPlayer.h
src/core/: XCAudioEngine.cpp  XCAudioEngine.h  XCMediaCore.cpp  XCMediaCore.h  XCType.h
src/manager/: CoverManager.cpp  CoverManager.h  DatabaseManager.cpp  DatabaseManager.h
src/model/: AlbumModel.cpp  AlbumModel.h  LyricsModel.cpp  LyricsModel.h  MediaModel.cpp  MediaModel.h  PlaylistModel.cpp  PlaylistModel.h  SortFilterModel.cpp  SortFilterModel.h
src/platform/: NativeEventFilter.cpp  NativeEventFilter.h
src/quickitem/: VideoDisplay.cpp  VideoDisplay.h
src/utility/: MediaInfo.h  MediaTool.cpp  MediaTool.h  ThreadPool.h  XCFL.cpp  XCFL.h
